--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -46,6 +46,7 @@
                 <ComboBoxItem>O.N.G.E.K.I. SUMMER</ComboBoxItem>
             </ComboBox>
         </Grid>
-        <Button Content="OK" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="60"/>
+        <Button Content="OK" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="60" Margin="90,0,0,0"/>
+        <Button Name="GodModeBtn" Content="Enable God Mode" Click="btnGodModeClick" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="120" Margin="160,0,0,0"/>
     </Grid>
 </Window>
