--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -51,7 +51,7 @@
                 <ComboBoxItem>O.N.G.E.K.I. SUMMER</ComboBoxItem>
             </ComboBox>
         </Grid>
-        <Button Content="OK" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="60" Margin="85,0,0,0"/>
+        <Button Content="OK" Click="btnOKClick" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="60" Margin="85,0,0,0"/>
         <Button Name="GodModeBtn" Content="Disable God Mode" Click="btnGodModeClick" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Height="20" Width="120" Margin="155,0,0,0" IsEnabled="False" ToolTip="Normal mode is still in progress."/>
     </Grid>
 </Window>
