--- a/Windows/GodMode/GodMain.xaml
+++ b/Windows/GodMode/GodMain.xaml
@@ -5,13 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OpenCardMaker.Windows.GodMode"
         mc:Ignorable="d"
-        Title="OpenCardMaker (God Mode)" Height="400" Width="670" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" WindowState="Normal" ResizeMode="CanMinimize">
+        Title="OpenCardMaker (God Mode)" Height="420" Width="670" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" WindowState="Normal" ResizeMode="CanMinimize">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="350"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TabControl Margin="5,5,5,5">
+        <DockPanel Height="20">
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_View All Cards List" Click="ViewAllCardsClick"/>
+                    <MenuItem Header="_Save" />
+                    <MenuItem Header="_Revert to Saved" />
+                    <Separator />
+                    <MenuItem Header="_Exit" />
+                </MenuItem>
+                <MenuItem Header="_Edit">
+                    <MenuItem Name="CopyMenuItem" Header="_Copy">
+                        <MenuItem Header="Card ID" />
+                        <MenuItem Header="Chara Name" />
+                        <MenuItem Header="Card Title" />
+                        <MenuItem Header="Card Level" />
+                        <MenuItem Header="Card Skill" />
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
+        <TabControl Margin="5,5,5,5" Grid.Row="1">
             <TabItem Header="Card List">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -36,13 +57,18 @@
                 </Grid>
             </TabItem>
             <TabItem Header="User Settings">
-                <Grid Background="#FFE5E5E5">
+                <Grid>
+                    <!--
                     <TextBlock Text="WIP" TextWrapping="Wrap" Margin="281,148,282,148" HorizontalAlignment="Center"/>
+                    -->
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="20*" />
+                    </Grid.ColumnDefinitions>
                 </Grid>
             </TabItem>
         </TabControl>
-        <TextBlock Name="UserName" HorizontalAlignment="Right" Grid.Row="1" Text="UserId: UserName" TextWrapping="Wrap" VerticalAlignment="Top" Margin="0,7,75,0"/>
-        <Button Content="Logout" Click="btnLogout" HorizontalAlignment="Right" Grid.Row="1" Width="60" Margin="0,5,8,8"/>
-        <TextBlock Name="DiagnosticLoadTime" Margin="8,7,481,0" Grid.Row="1" Text="Loaded in ?s" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock Name="UserName" HorizontalAlignment="Right" Grid.Row="2" Text="UserId: UserName" TextWrapping="Wrap" VerticalAlignment="Top" Margin="0,7,75,0"/>
+        <Button Content="Logout" Click="btnLogout" HorizontalAlignment="Right" Grid.Row="2" Width="60" Margin="0,5,8,8"/>
+        <TextBlock Name="DiagnosticLoadTime" Margin="8,7,481,0" Grid.Row="2" Text="Loaded in ?s" TextWrapping="Wrap" VerticalAlignment="Top"/>
     </Grid>
 </Window>
