--- a/Windows/GodMode/GodMain.xaml
+++ b/Windows/GodMode/GodMain.xaml
@@ -19,7 +19,7 @@
                     <MenuItem Header="_Save" />
                     <MenuItem Header="_Revert to Saved" />
                     <Separator />
-                    <MenuItem Header="_Exit" />
+                    <MenuItem Header="_Exit" Click="ExitApplicationClick" />
                 </MenuItem>
                 <MenuItem Header="_Edit">
                     <MenuItem Name="CopyMenuItem" Header="_Copy">
