Remove GodMode references
Well, at first, I'd like to make a Card Maker simulation UI for this. For now, I'll just make it as a normal card editor instead.

--- a/Dialogs/AddCardInfo.xaml
+++ b/Dialogs/AddCardInfo.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OpenCardMaker.Dialogs.GodMode.AddCardInfo"
+﻿<Window x:Class="OpenCardMaker.Dialogs.AddCardInfo"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenCardMaker.Dialogs.GodMode"
+        xmlns:local="clr-namespace:OpenCardMaker.Dialogs"
         mc:Ignorable="d"
         Title="Card Info" Height="256" Width="500">
     <Grid>
