--- a/Dialogs/AddCardConfirm.xaml
+++ b/Dialogs/AddCardConfirm.xaml
@@ -1,18 +1,18 @@
-﻿<Window x:Class="OpenCardMaker.Dialogs.GodMode.CardDetails"
+﻿<Window x:Class="OpenCardMaker.Dialogs.AddCardConfirm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenCardMaker.Dialogs.GodMode"
+        xmlns:local="clr-namespace:OpenCardMaker.Dialogs"
         mc:Ignorable="d"
-        Title="Card Info" Height="244" Width="380" WindowStartupLocation="CenterScreen">
+        Title="Card Info" Height="264" Width="380" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="160"/>
             <RowDefinition Height="25"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="118" />
                 <ColumnDefinition/>
@@ -36,9 +36,18 @@
                 <TextBox Name="CardAttributeBox" Grid.Row="2" Height="20" Margin="60,0,15,0" TextWrapping="Wrap" VerticalAlignment="Center" IsEnabled="False" Width="165" HorizontalAlignment="Right"/>
                 <TextBlock Grid.Row="3" HorizontalAlignment="Left" Margin="15,0,5,0" Text="Skill" TextWrapping="Wrap" VerticalAlignment="Center"/>
                 <TextBox Name="CardSkillBox" Grid.Row="3" Height="20" Margin="60,0,15,0" TextWrapping="Wrap" VerticalAlignment="Center" IsEnabled="False" Width="165" HorizontalAlignment="Right"/>
+                <!-- what to fill on 5th row? -->
                 <TextBlock Name="CopyrightBlock" Grid.Row="5" HorizontalAlignment="Right" Margin="5,0,15,0" Text="[Copyright]" TextWrapping="Wrap" VerticalAlignment="Center"/>
             </Grid>
         </Grid>
-        <Button Click="btnCloseClick" Grid.Row="1" Content="Close" HorizontalAlignment="Center" Margin="0,5,0,0" Width="60" Height="20" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Center" Grid.Row="1" Text="Insert this card?" TextWrapping="Wrap" VerticalAlignment="Center"/>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Click="btnOKClick" Content="Yes" HorizontalAlignment="Right" Margin="0,5,5,0" Width="60" Height="20" VerticalAlignment="Top"/>
+            <Button Click="btnCancelClick" Grid.Column="1" Content="Cancel" HorizontalAlignment="Left" Margin="5,5,0,0" Width="60" Height="20" VerticalAlignment="Top"/>
+        </Grid>
     </Grid>
 </Window>
