--- a/Dialogs/IncreaseCardCap.xaml
+++ b/Dialogs/IncreaseCardCap.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OpenCardMaker.Dialogs.GodMode.IncreaseCardCap"
+﻿<Window x:Class="OpenCardMaker.Dialogs.IncreaseCardCap"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OpenCardMaker.Dialogs.GodMode"
+        xmlns:local="clr-namespace:OpenCardMaker.Dialogs"
         mc:Ignorable="d"
         Title="Increase Level" Height="157" Width="250" WindowStartupLocation="CenterScreen">
     <Grid>
