--- a/Windows/GodMain.xaml
+++ b/Windows/GodMain.xaml
@@ -30,6 +30,9 @@
                         <MenuItem Name="CopySkill" Header="Card Skill" Click="CopyDataClick" />
                     </MenuItem>
                 </MenuItem>
+                <MenuItem Header="_Help">
+                    <MenuItem Name="AboutItem" Header="_About" Click="AboutClick" />
+                </MenuItem>
             </Menu>
         </DockPanel>
         <TabControl Margin="5,5,5,5" Grid.Row="1">
